--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,31 +10,29 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: fedora:latest
 
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
 
-    - name: Setup Docker
-      uses: docker/setup-buildx-action@v3
+    - name: Install Dependencies
+      run: dnf install -y dnf-plugins-core rpmdevtools
 
     - name: Build RPM
       run: |
-        docker run --rm -v $(pwd):/workspace -w /workspace fedora:latest bash -c "
-          dnf install -y dnf-plugins-core rpmdevtools &&
           spectool --get-files --directory=SOURCES --all SPECS/*.spec &&
           dnf builddep -y SPECS/*.spec &&
-          rpmbuild --define '_topdir /workspace' -ba SPECS/*.spec &&
-          grep -i '^version' SPECS/*.spec | awk '{print \"Driver Ver: \" \$NF}' >> release.log &&
-          rpm -q --qf 'Kernel Ver: %{VERSION}-%{RELEASE}\n' kernel-devel >> release.log
-        "
+          rpmbuild --define "_topdir ${GITHUB_WORKSPACE}" -ba SPECS/*.spec
 
-    - name: Set Variables
+    - name: Prepare Release
       id: vars
       run: |
-        echo "version=$(grep -i '^kernel' release.log | awk '{print $NF}')" >> $GITHUB_OUTPUT
+        grep -i "^version" SPECS/*.spec | awk "{print \"Driver Ver: \" \$NF}" >> release.log &&
+        rpm -q --qf "Kernel Ver: %{VERSION}-%{RELEASE}\n" kernel-devel >> release.log &&
+        echo "version=$(grep -i "^kernel" release.log | awk "{print \$NF}")" >> $GITHUB_OUTPUT
 
-    - name: Check
+    - name: Check Release
       run: |
         cat release.log
         cat leaves.list
