Upgrade to Ver 570.133.07

--- a/SOURCES/nvidia.conf
+++ b/SOURCES/nvidia.conf
@@ -1,2 +1,30 @@
+# Make a soft dependency for nvidia-uvm as adding the module loading to
+# /usr/lib/modules-load.d/nvidia-uvm.conf for systemd consumption, makes the
+# configuration file to be added to the initrd but not the module, throwing an
+# error on plymouth about not being able to find the module.
+# Ref: /usr/lib/dracut/modules.d/00systemd/module-setup.sh
+
+# Even adding the module is not the correct thing, as we don't want it to be
+# included in the initrd, so use this configuration file to specify the
+# dependency.
+
+# Added also nvidia-drm since on some machines it didn't get loaded
+# automatically, which resulted in Wayland sessions falling back
+# to simpledrm (slow!), external monitors and switcherooctl not
+# working at all.
+
+softdep nvidia post: nvidia-drm nvidia-uvm
+
+# Enable custom Nvidia device ownership:
+
+options nvidia NVreg_DeviceFileMode=0660
+
+# Enable complete power management. From:
+# file:///usr/share/doc/nvidia-driver/html/powermanagement.html
+
+options nvidia NVreg_TemporaryFilePath=/var/tmp
+options nvidia NVreg_EnableS0ixPowerManagement=1
+options nvidia NVreg_PreserveVideoMemoryAllocations=1
+
 # Configuration for nvidia-drm kernel module features
-options nvidia_drm modeset=1 fbdev=1
+options nvidia-drm modeset=1 fbdev=1
