--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install Dependencies
-      run: dnf install -y dnf-plugins-core rpmdevtools
+      run: dnf install -y dnf5-plugins rpmdevtools
 
     - name: Build RPM
       run: |
