--- a/SOURCES/nvidia.conf
+++ b/SOURCES/nvidia.conf
@@ -17,7 +17,7 @@ softdep nvidia post: nvidia-drm nvidia-uvm
 
 # Enable custom Nvidia device ownership:
 
-options nvidia NVreg_DeviceFileMode=0660
+options nvidia NVreg_DeviceFileGID=39
 
 # Enable complete power management. From:
 # file:///usr/share/doc/nvidia-driver/html/powermanagement.html
