--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           %_topdir ${GITHUB_WORKSPACE}
           %_openpgp_sign_id ${{ steps.gpg.outputs.keyid }}
           # Remove _gpg_name after rpm v6.0 is released
-          %_gpg_name ${{ steps.gpg.outputs.name }} ${{ steps.gpg.outputs.email }}
+          %_gpg_name ${{ steps.gpg.outputs.name }} (github/nvidia-driver) <${{ steps.gpg.outputs.email }}>
           EOF
 
       - name: Build & Sign RPM Packages
